# hugrs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh.md  openapi.yaml  test.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  coverage.yml  release.yml  security.yml
benches/: retry.rs
docs/: CLI.md  CLI_zh.md  CONFIG.md  CONFIG_zh.md  benchmark.md
docs/protocol/: huggingface.md  modelscope.md
docs/superpowers/plans/: 2026-06-20-github-actions-ci.md  2026-06-20-hugrs-implementation.md  2026-06-24-server-refactor-plan.md  2026-06-25-modelscope-support-plan.md  2026-06-25-user-agent-pass-through.md  2026-06-26-git-lfs-proxy.md  2026-06-28-cli-admin-implementation.md  2026-06-28-stats-api-field-renaming.md  2026-06-29-etag-validation.md  2026-07-01-file-completion-status.md  2026-07-01-packaging-and-paths.md  2026-07-02-metadata-reconcile-singleflight.md  2026-07-02-refcount-repair-and-batched-gc.md
docs/superpowers/specs/: 2026-06-20-hugrs-design.md  2026-06-24-server-refactor-design.md  2026-06-25-modelscope-head-fallback-design.md  2026-06-25-modelscope-support-design.md  2026-06-26-git-lfs-proxy-design.md  2026-06-28-cli-admin-design.md  2026-06-29-etag-validation-design.md  2026-07-01-file-completion-status-design.md  2026-07-02-metadata-reconcile-singleflight-design.md  2026-07-02-refcount-repair-and-batched-gc-design.md
src/: admin_client.rs  chunker.rs  cli.rs  config.rs  control.rs  daemon_cli.rs  git.rs  hf.rs  hugrsctl_cli.rs  lib.rs  main.rs  metadata.rs  server.rs  service.rs  session.rs
src/migrations/: 001_initial_core.sql  001_initial_schema.sql  002_rename_trunk_to_chunk.sql  003_drop_http_cache.sql  004_add_indexes.sql  005_cleanup_headerless_files.sql  006_add_chunk_orphaned_at.sql  007_add_orphan_gc_index.sql
src/storage/: local.rs  mod.rs  s3.rs
tests/: chunker_tests.rs  config_tests.rs  control_tests.rs  daemon_cli_tests.rs  e2e_tests.rs  etag_tests.rs  git_tests.rs  metadata_tests.rs  service_tests.rs  storage_tests.rs  streaming_tests.rs
