[package]
name = "hugrs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls", "json"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3"
toml = "0.8"
dotenvy = "0.15"
dirs = "6"
zstd = "0.13"

[dev-dependencies]
tokio-test = "0.4"
