[package]
name = "hugrs"
version = "0.4.0"
edition = "2021"
description = "A transparent caching proxy for HuggingFace model files with content-addressed 4MB chunk storage"
license = "MIT"
repository = "https://github.com/anomalyco/hugrs"
readme = "README.md"

[lints.clippy]
await_holding_lock = "deny"
expect_used = "deny"
manual_ok_or = "deny"
needless_question_mark = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
uninlined_format_args = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls", "json"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
dashmap = "6"
dotenvy = "0.15"
dirs = "6"
zstd = "0.13"
rusqlite_migration = "2"
figment = { version = "0.10", features = ["env", "toml", "test"] }

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
tempfile = "3"
